--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <script>
     const SHEET_URL = 'https://api.sheetbest.com/sheets/ec6ca1f8-de13-4cad-a4b1-1e1919ff5d48';
-    const N8N_WEBHOOK_URL = 'https://SEU_WEBHOOK_N8N_HERE';
+    const N8N_WEBHOOK_URL = 'https://gazeredo.app.n8n.cloud/webhook-test/604b8346-e309-4199-ad53-419ab978fd28';
 
     async function carregarContatos() {
       const res = await fetch(SHEET_URL);
