--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
     async function alternarModo(numero, modoAtual) {
       const novoModo = modoAtual === "bot" ? "humano" : "bot";
 
-      await fetch("https://gazeredo.app.n8n.cloud/webhook-test/604b8346-e309-4199-ad53-419ab978fd28", {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ numero, modo: novoModo })
-      });
+    fetch('https://gazeredo.app.n8n.cloud/webhook-test/604b8346-e309-4199-ad53-419ab978fd28', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({
+    numero: '5521999999999',
+    modo: 'bot' // ou 'humano'
+  })
+})
 
       carregarContatos(); // atualiza após mudar
     }
