--- a/index.html
+++ b/index.html
@@ -2,103 +2,52 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Painel de Controle do Bot</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #e5ddd5;
-      margin: 0;
-      padding: 20px;
-    }
-    .container {
-      max-width: 600px;
-      margin: auto;
-      background: #fff;
-      border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h2 {
-      text-align: center;
-      color: #075e54;
-    }
-    .contact {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px;
-      border-bottom: 1px solid #ccc;
-    }
-    .numero {
-      font-weight: bold;
-    }
-    .botoes {
-      display: flex;
-      gap: 8px;
-    }
-    button {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      color: white;
-    }
-    .ligado {
-      background-color: #34b7f1;
-    }
-    .desligado {
-      background-color: #f44336;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
-<body>
-  <div class="container">
-    <h2>💬 Painel de Controle do Bot</h2>
-
-    <!-- Contato 1 -->
-    <div class="contact">
-      <div class="numero">Paulo – 5521993916978</div>
-      <div class="botoes">
-        <button class="ligado" onclick="setModo('bot', '5521993916978')">🤖 Bot Ligado</button>
-        <button class="desligado" onclick="setModo('humano', '5521993916978')">🙋 Bot Desligado</button>
-      </div>
-    </div>
-
-    <!-- Exemplo: Adicione mais blocos de contato aqui -->
-    <!--
-    <div class="contact">
-      <div class="numero">Contato XYZ – 55219XXXXXXX</div>
-      <div class="botoes">
-        <button class="ligado" onclick="setModo('bot', '55219XXXXXXX')">🤖 Bot Ligado</button>
-        <button class="desligado" onclick="setModo('humano', '55219XXXXXXX')">🙋 Bot Desligado</button>
-      </div>
-    </div>
-    -->
-
+<body class="bg-light">
+  <div class="container py-5">
+    <h2 class="text-center mb-4">💬 Painel de Controle do Bot</h2>
+    <div id="contatos" class="d-flex flex-column gap-3"></div>
   </div>
 
   <script>
-    function setModo(modo, numero) {
-      fetch("https://gazeredo.app.n8n.cloud/webhook-test/604b8346-e309-4199-ad53-419ab978fd28", {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ numero, modo })
-      })
-      .then(res => {
-        if (res.ok) {
-          alert(`Modo "${modo}" enviado com sucesso para ${numero}`);
-        } else {
-          alert('Erro ao atualizar. Verifique o console.');
-        }
-      })
-      .catch(err => {
-        console.error('Erro na requisição:', err);
-        alert('Erro ao enviar comando.');
+    const apiUrl = 'https://api.sheetbest.com/sheets/ec6ca1f8-de13-4cad-a4b1-1e1919ff5d48';
+    const webhookUrl = 'https://gazeredo.app.n8n.cloud/webhook-test/604b8346-e309-4199-ad53-419ab978fd28';
+
+    async function carregarContatos() {
+      const res = await fetch(apiUrl);
+      const contatos = await res.json();
+
+      const container = document.getElementById('contatos');
+      container.innerHTML = '';
+
+      contatos.forEach(contato => {
+        const card = document.createElement('div');
+        card.className = 'card p-3';
+        card.innerHTML = `
+          <h5>${contato.Nome} – ${contato.numero}</h5>
+          <div class="btn-group" role="group">
+            <button class="btn btn-sm btn-success" onclick="alterarModo('${contato.numero}', 'bot')">🤖 Bot Ligado</button>
+            <button class="btn btn-sm btn-danger" onclick="alterarModo('${contato.numero}', 'OFF')">🔇 Bot Desligado</button>
+          </div>
+        `;
+        container.appendChild(card);
       });
     }
+
+    async function alterarModo(numero, modo) {
+      await fetch(webhookUrl, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ numero, modo })
+      });
+    }
+
+    carregarContatos();
   </script>
 </body>
 </html>
