--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/config.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/app.js"></script>
+<script type="module" src="js/config.js"></script>
+<script type="module" src="js/api.js"></script>
+<script type="module" src="js/ui.js"></script>
+<script type="module" src="js/app.js"></script>
+
 </body>
 </html>
 
