--- a/index.html
+++ b/index.html
@@ -50,15 +50,25 @@
       });
     }
 
-    async function alternarModo(numero, modoAtual) {
-      const novoModo = modoAtual === "bot" ? "humano" : "bot";
+   async function alternarModo(numero, modo) {
+  try {
+    const response = await fetch("https://gazeredo.app.n8n.cloud/webhook/atualizar-modo", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        numero: numero,
+        modo: modo
+      })
+    });
 
-      await fetch("https://gazeredo.app.n8n.cloud/webhook-test/604b8346-e309-4199-ad53-419ab978fd28", {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ numero, modo: novoModo })
-      });
-
+    const data = await response.json();
+    console.log("Resposta do webhook:", data);
+  } catch (error) {
+    console.error("Erro ao enviar para o webhook:", error);
+  }
+}
       carregarContatos(); // atualiza após mudar
     }
 
