--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -38,41 +37,45 @@
       dados.forEach(contato => {
         const div = document.createElement("div");
         div.className = "card";
+        const nome = contato.nome || "Sem nome";
+        const numero = contato.numero || "Desconhecido";
+        const modo = contato.modo === "bot" ? "bot" : "humano";
+        const novoModo = modo === "bot" ? "humano" : "bot";
+
         div.innerHTML = `
-          <strong>${contato.nome || "Sem nome"}</strong><br>
-          Número: ${contato.numero}<br>
-          Modo: <strong>${contato.modo}</strong><br>
-          <button class="${contato.modo === 'bot' ? 'off' : ''}" onclick="alternarModo('${contato.numero}', '${contato.modo}')">
-            ${contato.modo === 'bot' ? 'Desligar Bot' : 'Ligar Bot'}
+          <strong>${nome}</strong><br>
+          Número: ${numero}<br>
+          Modo: <strong>${modo}</strong><br>
+          <button class="${modo === 'bot' ? 'off' : ''}" onclick="alternarModo('${numero}', '${novoModo}')">
+            ${modo === 'bot' ? 'Desligar Bot' : 'Ligar Bot'}
           </button>
         `;
         painel.appendChild(div);
       });
     }
 
-   async function alternarModo(numero, modo) {
-  try {
-    const response = await fetch("https://gazeredo.app.n8n.cloud/webhook/atualizar-modo", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-        numero: numero,
-        modo: modo
-      })
-    });
+    async function alternarModo(numero, novoModo) {
+      try {
+        const response = await fetch("https://gazeredo.app.n8n.cloud/webhook/atualizar-modo", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            numero: numero,
+            modo: novoModo
+          })
+        });
 
-    const data = await response.json();
-    console.log("Resposta do webhook:", data);
-  } catch (error) {
-    console.error("Erro ao enviar para o webhook:", error);
-  }
-}
-      carregarContatos(); // atualiza após mudar
+        const data = await response.json();
+        console.log("Resposta do webhook:", data);
+        await carregarContatos(); // Atualiza após o envio com sucesso
+      } catch (error) {
+        console.error("Erro ao enviar para o webhook:", error);
+      }
     }
 
-    carregarContatos(); // inicial
+    carregarContatos(); // Inicial
   </script>
 </body>
 </html>
