--- a/index.html
+++ b/index.html
@@ -28,32 +28,31 @@
   <div id="painel"></div>
 
   <script>
- async function carregarContatos() {
-  const res = await fetch("https://api.sheetbest.com/sheets/ec6ca1f8-de13-4cad-a4b1-1e1919ff5d48");
-  const dados = await res.json();
-  const painel = document.getElementById("painel");
-  painel.innerHTML = "";
+    async function carregarContatos() {
+      const res = await fetch("https://api.sheetbest.com/sheets/ec6ca1f8-de13-4cad-a4b1-1e1919ff5d48");
+      const dados = await res.json();
+      const painel = document.getElementById("painel");
+      painel.innerHTML = "";
 
-  dados.forEach(contato => {
-    const nome = contato.Nome || "Sem nome";
-    const numero = contato.numero || "Desconhecido";
-    const modo = contato.modo === "bot" ? "bot" : "humano";
-    const novoModo = modo === "bot" ? "humano" : "bot";
+      dados.forEach(contato => {
+        const nome = contato.Nome || "Sem nome";
+        const numero = contato.numero || "Desconhecido";
+        const modo = contato.modo === "bot" ? "bot" : "humano";
+        const novoModo = modo === "bot" ? "humano" : "bot";
 
-    const div = document.createElement("div");
-    div.className = "card";
-    div.innerHTML = `
-      <strong>${nome}</strong><br>
-      Número: ${numero}<br>
-      Modo: <strong>${modo}</strong><br>
-      <button class="${modo === 'bot' ? 'off' : ''}" onclick="alternarModo('${numero}', '${novoModo}')">
-        ${modo === 'bot' ? 'Desligar Bot' : 'Ligar Bot'}
-      </button>
-    `;
-    painel.appendChild(div);
-  });
-}
-
+        const div = document.createElement("div");
+        div.className = "card";
+        div.innerHTML = `
+          <strong>${nome}</strong><br>
+          Número: ${numero}<br>
+          Modo: <strong>${modo}</strong><br>
+          <button class="${modo === 'bot' ? 'off' : ''}" onclick="alternarModo('${numero}', '${novoModo}')">
+            ${modo === 'bot' ? 'Desligar Bot' : 'Ligar Bot'}
+          </button>
+        `;
+        painel.appendChild(div);
+      });
+    }
 
     async function alternarModo(numero, novoModo) {
       try {
@@ -70,13 +69,13 @@
 
         const data = await response.json();
         console.log("Resposta do webhook:", data);
-        await carregarContatos(); // Atualiza após o envio com sucesso
+        await carregarContatos(); // atualiza após mudar
       } catch (error) {
         console.error("Erro ao enviar para o webhook:", error);
       }
     }
 
-    carregarContatos(); // Inicial
+    carregarContatos(); // inicial
   </script>
 </body>
 </html>
