--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
   <div id="painel"></div>
 
   <script>
+    const SHEET_URL = "https://api.sheetbest.com/sheets/ec6ca1f8-de13-4cad-a4b1-1e1919ff5d48";
+
     async function carregarContatos() {
-      const res = await fetch("https://api.sheetbest.com/sheets/ec6ca1f8-de13-4cad-a4b1-1e1919ff5d48");
+      const res = await fetch(SHEET_URL);
       const dados = await res.json();
       const painel = document.getElementById("painel");
       painel.innerHTML = "";
@@ -73,19 +75,20 @@
 
     async function alternarModo(numero, novoModo) {
       try {
-        const response = await fetch("https://gazeredo.app.n8n.cloud/webhook/atualizar-modo", {
-          method: "POST",
+        const patchUrl = `${SHEET_URL}/numero/${numero}`;
+        const response = await fetch(patchUrl, {
+          method: "PATCH",
           headers: {
             "Content-Type": "application/json"
           },
-          body: JSON.stringify({ numero, modo: novoModo })
+          body: JSON.stringify({ modo: novoModo })
         });
 
         const data = await response.json();
-        console.log("Resposta do webhook:", data);
+        console.log("Atualização realizada:", data);
         await carregarContatos();
       } catch (error) {
-        console.error("Erro ao enviar para o webhook:", error);
+        console.error("Erro ao atualizar o modo no SheetBest:", error);
       }
     }
 
