--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<div id="login">
+  <h2>Login</h2>
+  <input type="password" id="senha" placeholder="Digite a senha" />
+  <button onclick="verificarSenha()">Entrar</button>
+</div>
+
+<div id="painel" style="display:none;"></div>
+
 <div id="painel" style="display:none;"></div>
 <!DOCTYPE html>
 <html lang="pt-br">
