--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<div id="login">
-  <h2>Login</h2>
-  <input type="password" id="senha" placeholder="Digite a senha" />
-  <button onclick="verificarSenha()">Entrar</button>
-</div>
 
-<div id="painel" style="display:none;"></div>
-
-<div id="painel" style="display:none;"></div>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -16,31 +8,20 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
-    <div class="header-left">
-      <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"/>
-      <h1>Painel Bot WhatsApp</h1>
+  <div id="loginModal" class="modal">
+    <div class="modal-content">
+      <h2>Login</h2>
+      <input type="password" id="senha" placeholder="Digite a senha"/>
+      <button onclick="validarSenha()">Entrar</button>
+      <p id="mensagemErro" class="erro"></p>
     </div>
-    <div class="header-right">
-      <div>Total de Contatos: <span id="total-contatos">0</span></div>
-      <div>Bots Ativos: <span id="bots-ativos">0</span></div>
-      <div>Última Atualização: <span id="hora-atual">--:--:--</span></div>
-      <button id="btn-recarregar">🔄</button>
-    </div>
-  </header>
+  </div>
 
-  <main>
-    <div class="controls">
-      <input type="text" id="busca" placeholder="🔍 Buscar por nome ou número..." />
-      <div class="filtros">
-        <button class="filtro ativo" data-filtro="todos">🗂️ Todos</button>
-        <button class="filtro" data-filtro="bot">✅ Bot Ativo</button>
-        <button class="filtro" data-filtro="humano">❌ Bot Desligado</button>
-      </div>
-    </div>
-    <div id="painel" class="grid"></div>
-  </main>
+  <div id="painel" class="hidden">
+    <!-- Conteúdo será carregado pelo JS -->
+  </div>
 
+  <script src="js/login.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
