--- a/index.html
+++ b/index.html
@@ -24,4 +24,11 @@
   <script src="js/login.js"></script>
   <script src="js/app.js"></script>
 </body>
+<div id="loginModal" class="modal">
+  <div class="modal-content">
+    <h2>Autenticação</h2>
+    <input type="password" id="senha" placeholder="Digite a senha" />
+    <button id="btnEntrar">Entrar</button>
+  </div>
+</div>
 </html>
